--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@netlify/plugin-nextjs": "^5.9.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@react-google-maps/api": "^2.20.6",
     "@types/leaflet": "^1.9.16",
+    "add": "^2.0.6",
     "axios": "^1.7.9",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
@@ -30,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "save": "^2.9.0",
+    "shadcn": "^2.3.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
