--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "-": "^0.0.1",
     "@hookform/resolvers": "^4.1.0",
     "@netlify/plugin-nextjs": "^5.9.4",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-table": "^8.21.2",
     "@types/leaflet": "^1.9.16",
     "add": "^2.0.6",
     "axios": "^1.7.9",
