--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3",
     "save": "^2.9.0",
     "shadcn": "^2.3.0",
     "tailwind-merge": "^3.0.1",
